syntax = "proto3";

package golem.auth;

enum AccountRole {
  ACCOUNT_ROLE_ADMIN = 0;
  ACCOUNT_ROLE_MARKETING_ADMIN = 1;
}
